<resources>
    <string name="app_name">PictureDay</string>
    <string name="helper_text_question">Что ищем?</string>
    <string name="setting">Setting</string>
    <string name="rocket_launch">Rocket Launch</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="before_yesterday">Позавчера</string>
    <string name="empty_photo">Ссылка на фото пустая</string>
    <string name="search_your_tube">www.youtube.com</string>
    <string name="dialog_title_see_on_youtube">Фото на youtube</string>
    <string name="dialog_message_to_see">Хотите посмотреть?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="url_wiki">https://ru.wikipedia.org/wiki/</string>
    <string name="error_network">Network error</string>
    <string name="clear_web_view">about:blank</string>
    <string name="google_time">America/Los_Angeles</string>
    <string name="current_photo_description">Current photo</string>
    <string name="theme_default">Тема по умолчанию</string>
    <string name="theme_universe">Тема - ВСЕЛЕННАЯ</string>
    <string name="theme_mars">Тема - МАРС</string>
    <string name="theme_moon">Тема - ЛУНА</string>
    <string name="photo_of_the_day">Photo of the Day</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="cosmos_day">CosmosDay</string>
    <string name="earth_photo">Earth photo</string>
    <string name="choice_the_data">Choice the data</string>
    <string name="earth_fab_backstack">Возврат к основному экрану выбора даты</string>
    <string name="cosmos_gallery">Cosmos Gallery</string>
</resources>