<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/clear_text_button"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_text_margin"
            app:boxCornerRadiusBottomEnd="@dimen/radius_edit_text"
            app:boxCornerRadiusTopEnd="@dimen/radius_edit_text"
            app:boxCornerRadiusTopStart="@dimen/radius_edit_text"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_search_wiki"
            app:endIconMode="custom"
            app:helperText="@string/helper_text_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clear_text_button"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/choice_now"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/today" />

            <com.google.android.material.chip.Chip
                android:id="@+id/choice_yesterday"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/choice_before_yesterday"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/before_yesterday" />
        </com.google.android.material.chip.ChipGroup>

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clear_text_button" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottom_sheet_color"
        android:visibility="visible"
        app:behavior_hideable="true"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <View
            android:id="@+id/bottom_sheet_line"
            android:layout_width="30dp"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:background="@color/bottom_sheet_line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottom_sheet_description_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/bottom_sheet_color"
            android:paddingStart="@dimen/main_padding"
            android:paddingEnd="@dimen/main_padding"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_line"
            tools:text="Two Clusters and a Comet" />

        <TextView
            android:id="@+id/bottom_sheet_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/main_padding"
            android:paddingEnd="@dimen/main_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_description_header"
            tools:text="This lovely starfield spans some four full moons (about 2 degrees) across the heroic northern constellation of Perseus. In telescopic exposures made during the nights of January 24, 26, and 28 it holds the famous pair of open or galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2) captured each night as it swept left to right across the field of view. Also cataloged as NGC 869 (right) and NGC 884, both star clusters are about 7,000 light-years away and contain stars much younger and hotter than the Sun. Separated by only a few hundred light-years, the clusters are both 13 million years young based on the ages of their individual stars, evidence that they were likely a product of the same star-forming region. Discovered in 2017 while still beyond the orbit of Saturn, Comet PanSTARRs is a new visitor to the inner solar system and just over 13 light-minutes from planet Earth. Always a rewarding sight in binoculars, the Double Cluster is even visible to the unaided eye from dark locations. C/2017 T2 could remain a telescopic comet though. One of the brightest comets anticipated in 2020 it makes its closest approach to the Sun in early May." />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/web_block"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bottom_sheet_color"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <View
                    android:id="@+id/bottom_sheet_line_web"
                    android:layout_width="30dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@color/bottom_sheet_line_color" />

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bottom_sheet_color" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/bottom_menu_color"
        app:menu="@menu/menu_bottom_appbar"
        app:navigationIcon="@drawable/ic_menu_show" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>